--- a/lesson1/contacts.html
+++ b/lesson1/contacts.html
@@ -11,5 +11,25 @@
     <li><a href="./catalog/catalog.html">Каталог</a></li>
     <li><a href="#">Контакты</a></li>
   </ul>
+  <h1>Напишите нам</h1>
+  <form>
+    <input type="text" placeholder="Ваше имя">
+    <br>
+    <br>
+    <input type="email" placeholder="Email">
+    <br>
+    <br>
+    <input type="text" placeholder="Сообщение">
+    <button>Отправить</button>
+  </form>
+
+  <h1>Контакты</h1>
+  <p>Телефон: +375 (29) 555-77- 33</p>
+  <p>Email: potato@potato.com</p>
+  <p>Адрес: Республика Беларусь г. Гомель, ул. Свиридова, дом 5</p>
+  <h3>Мы в социальных сетях</h3>
+  <a href="https://vk.com/" target="_blank"> <img src="./img/vk.png" alt="vk" width="35"></a>
+  <a href="https://mail.ru/" target="_blank"> <img src="./img/mail.png" alt="mail" width="35"></a>
+
 </body>
 </html>
