--- a/lesson1/contacts.html
+++ b/lesson1/contacts.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
 <body>
   <ul>
-    <li><a href="./index.html">Главная</a></li>
-    <li><a href="./catalog/catalog.html">Каталог</a></li>
-    <li><a href="#">Контакты</a></li>
+    <li><a class="link" href="./index.html">Главная</a></li>
+    <li><a class="link" href="./catalog/catalog.html">Каталог</a></li>
+    <li><a class="link" href="#">Контакты</a></li>
   </ul>
   <h1>Напишите нам</h1>
   <form>
@@ -20,13 +21,13 @@
     <br>
     <br>
     <input type="text" placeholder="Сообщение">
-    <button>Отправить</button>
+    <button class="button">Отправить</button>
   </form>
 
-  <h1>Контакты</h1>
-  <p>Телефон: +375 (29) 555-77- 33</p>
-  <p>Email: potato@potato.com</p>
-  <p>Адрес: Республика Беларусь г. Гомель, ул. Свиридова, дом 5</p>
+  <h1 class="title">Контакты</h1>
+  <p class="text">Телефон: +375 (29) 555-77- 33</p>
+  <p class="text">Email: potato@potato.com</p>
+  <p class="text">Адрес: Республика Беларусь г. Гомель, ул. Свиридова, дом 5</p>
   <h3>Мы в социальных сетях</h3>
   <a href="https://vk.com/" target="_blank"> <img src="./img/vk.png" alt="vk" width="35"></a>
   <a href="https://mail.ru/" target="_blank"> <img src="./img/mail.png" alt="mail" width="35"></a>
