--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Lesson 1</title>
 </head>
 <body>
   <ul>
-    <li><a href="#">Главная</a></li>
-    <li><a href="./catalog/catalog.html">Каталог</a></li>
-    <li><a href="./contacts.html">Контакты</a></li>
+    <li><a class="link" href="#">Главная</a></li>
+    <li><a class="link" href="./catalog/catalog.html">Каталог</a></li>
+    <li><a class="link" href="./contacts.html">Контакты</a></li>
   </ul>
-  <h1>Главная страница</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt officia doloribus iusto ad culpa at est. Et numquam, aliquid explicabo nihil odit vel nostrum, recusandae vitae, id magnam quod ipsam?</p>
-  <h2>Добро пожаловать на сайт</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor quas facere nemo amet consequuntur incidunt laudantium vero quaerat distinctio sit vel, fugiat ea nam ut in nisi cum architecto nobis, reiciendis voluptatibus accusantium aspernatur natus dicta. Perferendis doloremque libero ipsum veritatis eaque, tempora nesciunt illum harum dignissimos ipsa? Corporis, impedit!</p>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ad ipsa nobis qui optio enim? Fugiat laudantium hic aspernatur numquam placeat, officiis nisi asperiores aliquid!</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, iusto.</p>
+  <h1 class="title">Главная страница</h1>
+  <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt officia doloribus iusto ad culpa at est. Et numquam, aliquid explicabo nihil odit vel nostrum, recusandae vitae, id magnam quod ipsam?</p>
+  <h2 class="subtitle">Добро пожаловать на сайт</h2>
+  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor quas facere nemo amet consequuntur incidunt laudantium vero quaerat distinctio sit vel, fugiat ea nam ut in nisi cum architecto nobis, reiciendis voluptatibus accusantium aspernatur natus dicta. Perferendis doloremque libero ipsum veritatis eaque, tempora nesciunt illum harum dignissimos ipsa? Corporis, impedit!</p>
+  <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ad ipsa nobis qui optio enim? Fugiat laudantium hic aspernatur numquam placeat, officiis nisi asperiores aliquid!</p>
+  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, iusto.</p>
 </body>
 </html>
