--- a/lesson1/catalog/catalog.html
+++ b/lesson1/catalog/catalog.html
@@ -14,15 +14,15 @@
   </ul>
   <h1 class="title">Каталог</h1>
   <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod molestias, delectus, incidunt eius, facere accusamus temporibus numquam tempora iste ea aliquid eveniet ullam dignissimos aliquam velit ut nemo voluptas in eum laborum. Consectetur officiis, modi rem accusantium recusandae asperiores blanditiis vel reprehenderit earum corrupti minima. Quas exercitationem possimus ipsum nemo nisi impedit maxime odit minus, quae tenetur iste cum architecto et, consectetur excepturi sunt pariatur explicabo numquam nulla rem, accusamus cupiditate natus optio? Quis ipsa rem earum, officia nostrum eum dolores doloribus sit consequuntur ipsum voluptatum deserunt quaerat voluptatem, facilis corrupti aliquid soluta minus illum recusandae dolore qui repellat? Possimus culpa neque doloribus nam ab id nemo. Quas nostrum minima sequi obcaecati similique dolorem? Est assumenda eum ipsum deleniti obcaecati fugiat corrupti eos recusandae sapiente illum optio incidunt aperiam ut voluptate at, molestiae repellendus, et harum? Ea quos ut saepe vero illo. Maiores, illo nostrum? Reprehenderit cum quaerat numquam quisquam!</p>
-  <img class="picture" src="../img/chips-cut-potato-slices-wooden.jpg" alt="Чипсы" width="500">
+  <img class="picture" src="../img/chips-cut-potato-slices-wooden.jpg" alt="Чипсы">
   <h2 class="subtitle">Чипсы</h2>
   <p class="text">Хрустящие чипсы, изготовленные из свежего картофеля.</p>
   <br>
-  <img class="picture" src="../img/fried-potatoes-with-ketchup-mayonnaise-tomatoes-peppers-table.jpg" alt="Картофель фри" width="500">
+  <img class="picture" src="../img/fried-potatoes-with-ketchup-mayonnaise-tomatoes-peppers-table.jpg" alt="Картофель фри">
   <h2 class="subtitle">Картофель фри</h2>
   <p class="text">Поджаренные брусочки картофеля с нежной хрустящей корочкой. Подаются с соусом</p>
   <br>
-  <img class="picture" src="../img/french-fries-potato.jpg" alt="Картофель по-деревенски" width="500">
+  <img class="picture" src="../img/french-fries-potato.jpg" alt="Картофель по-деревенски">
   <h2 class="subtitle">Картофель по-деревенски</h2>
   <p class="text">Поджаренные ломтики картофеля, приправленные специями.</p>
 </body>
