--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -14,7 +14,12 @@
 					<a class="navigation_home" href="#">Home</a>
 					<a href="#">About Us</a>
 					<a href="#">Services</a>
-					<a href="#">Features</a>
+					<a href="#">
+						<span style="margin-right: 6px">Features</span>
+						<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+							<path d="M2 5L5 8L8 5" stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+						</svg>
+					</a>
 					<a href="#">Team</a>
 					<a href="#">Blog</a>
 					<a href="#">Contact</a>
