--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -11,7 +11,7 @@
 			<section class="container">
 				<a href="#"><img src="./img/logo1.png" alt="Logo1" /></a>
 				<div class="navigation">
-					<a class="navigation_home" href="#">Home</a>
+					<a class="navigation__home" href="#">Home</a>
 					<a href="#">About Us</a>
 					<a href="#">Services</a>
 					<a href="#">
@@ -28,10 +28,10 @@
 		</header>
 		<main class="main">
 			<section class="container">
-				<div class="mainContent_leftSide">
+				<div class="mainContent__leftSide">
 					<h1>SEO & Digital Marketing For Your Website.</h1>
 					<p>Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
-					<div class="mainContent_leftSide-btnList">
+					<div class="mainContent__leftSide-btnList">
 						<button class="btnStartNow">Start Now</button>
 						<button class="btnWatchVideo">Watch Video</button>
 					</div>
