--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<section class="container">
+			<nav class="container">
 				<a href="#"><img src="./img/logo1.png" alt="Logo1" /></a>
 				<div class="navigation">
 					<a class="navigation__home" href="#">Home</a>
@@ -24,7 +24,7 @@
 					<a href="#">Blog</a>
 					<a href="#">Contact</a>
 				</div>
-			</section>
+			</nav>
 		</header>
 		<main class="main">
 			<section class="container">
