--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<nav class="container">
+			<nav class="nav__header container">
 				<a href="#"><img src="./img/logo1.png" alt="Logo1" /></a>
 				<div class="navigation">
 					<a class="navigation__home" href="#">Home</a>
@@ -27,7 +27,7 @@
 			</nav>
 		</header>
 		<main class="main">
-			<section class="container">
+			<section class="mainContent container">
 				<div class="mainContent__leftSide">
 					<h1>SEO & Digital Marketing For Your Website.</h1>
 					<p>Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
@@ -40,7 +40,7 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<nav class="container">
+			<nav class="logos container">
 				<a href="#"><img src="./img/logo2.png" alt="Logo2" /></a>
 				<a href="#"><img src="./img/logo3.png" alt="Logo3" /></a>
 				<a href="#"><img src="./img/logo4.png" alt="Logo4" /></a>
