--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -38,8 +38,6 @@
 				</div>
 				<img src="./img/work.png" alt="Work" />
 			</section>
-		</main>
-		<footer class="footer">
 			<nav class="logos container">
 				<a href="#"><img src="./img/logo2.png" alt="Logo2" /></a>
 				<a href="#"><img src="./img/logo3.png" alt="Logo3" /></a>
@@ -48,6 +46,64 @@
 				<a href="#"><img src="./img/logo6.png" alt="Logo6" /></a>
 				<a href="#"><img src="./img/logo7.png" alt="Logo7" /></a>
 			</nav>
-		</footer>
+			<section class="cardTopList container">
+				<div class="cardTop icon1">
+					<img src="./img/icon1.png" alt="icon1" />
+					<h2>Grow Your Business</h2>
+					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+					<button>Read More...</button>
+				</div>
+				<div class="cardTop icon2">
+					<img src="./img/icon2.png" alt="icon2" />
+					<h2>Get Quality Ieads</h2>
+					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+					<button>Read More...</button>
+				</div>
+				<div class="cardTop icon3">
+					<img src="img/icon3.png" alt="icon3" />
+					<h2>Drive More Sales</h2>
+					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+					<button>Read More...</button>
+				</div>
+			</section>
+			<section class="mainInformation">
+				<div class="information container">
+					<h1>Why You Should Choose Us.</h1>
+					<p>
+						Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications
+						through revolutionary catalysts.
+					</p>
+				</div>
+				<section class="cardBottomList container">
+					<div class="cardBottom">
+						<img src="./img/card1.png" alt="card1" />
+						<h2>Keyword Research</h2>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+						<button>
+							Learn More
+							<img src="./img/iconbtn.svg" alt="iconbtn" />
+						</button>
+					</div>
+					<div class="cardBottom card2">
+						<img src="./img/card2.png" alt="card2" />
+						<h2>Seo Optimazadion</h2>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+						<button>
+							Learn More
+							<img src="./img/iconbtn.svg" alt="iconbtn" />
+						</button>
+					</div>
+					<div class="cardBottom">
+						<img src="./img/card3.png" alt="card3" />
+						<h2>Social Marketing</h2>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+						<button>
+							Learn More
+							<img src="./img/iconbtn.svg" alt="iconbtn" />
+						</button>
+					</div>
+				</section>
+			</section>
+		</main>
 	</body>
 </html>
