--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -21,13 +21,124 @@
 			</nav>
 		</header>
 		<main>
-			<section class="maininfo">
-				<img src="./img/mainimg.png" alt="main" />
-				<div>
+			<section class="bannerinfo">
+				<img src="./img/mainimg.png" alt="banner" />
+				<div class="bannerText">
 					<h1>THE BRAND</h1>
-					<h2>OF LUXERIOUS FASHION</h2>
+					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
 				</div>
 			</section>
 		</main>
+		<section class="offer container">
+			<div class="card1">
+				<div class="shadow">
+					<div class="price">
+						<h1>30% OFF</h1>
+						<h2>FOR WOMEN</h2>
+					</div>
+				</div>
+			</div>
+			<div class="card2">
+				<div class="shadow">
+					<div class="price">
+						<h1>HOT DEAL</h1>
+						<h2>FOR MEN</h2>
+					</div>
+				</div>
+			</div>
+			<div class="card3">
+				<div class="shadow">
+					<div class="price">
+						<h1>NEW ARRIVALS</h1>
+						<h2>FOR KIDS</h2>
+					</div>
+				</div>
+			</div>
+			<div class="card4 cardBig">
+				<div class="shadow">
+					<div class="price priceBig">
+						<h1>LUXIROUS & TRENDY</h1>
+						<h2>ACCESORIES</h2>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="container">
+			<div class="information">
+				<h1>Fetured Items</h1>
+				<p>Shop for items based on what we featured in this week</p>
+			</div>
+		</section>
+		<section class="products container">
+			<div class="product">
+				<img src="./img/product1.jpg" alt="Product1" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+			<div class="product">
+				<img src="./img/product2.png" alt="Product2" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+			<div class="product">
+				<img src="./img/product3.jpg" alt="Product3" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+			<div class="product">
+				<img src="./img/product4.jpg" alt="Product4" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+			<div class="product">
+				<img src="./img/product5.png" alt="Product5" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+			<div class="product">
+				<img src="./img/product6.png" alt="Product5" />
+				<div class="prodInfo">
+					<h1>ELLERY X M'O CAPSULE</h1>
+					<p>
+						Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with
+						Moda Operandi.
+					</p>
+					<h2>$52.00</h2>
+				</div>
+			</div>
+		</section>
+		<div class="finishbtn container">
+			<button class="btnAll">Browse All Product</button>
+		</div>
 	</body>
 </html>
