--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -22,7 +22,7 @@
 		</header>
 		<main>
 			<section class="bannerinfo">
-				<img src="./img/mainimg.png" alt="banner" />
+				<img class="banner768" src="./img/mainimg.png" alt="banner" />
 				<div class="bannerText">
 					<h1>THE BRAND</h1>
 					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
