--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -15,14 +15,14 @@
 				</div>
 				<div class="buttonList">
 					<button class="btn"><img src="./img/forma2.svg" alt="Forma2" /></button>
-					<button class="btn"><img src="./img/forma3.svg" alt="Forma3" /></button>
-					<button class="btn"><img src="./img/forma4.svg" alt="Forma4" /></button>
+					<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
+					<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
 				</div>
 			</nav>
 		</header>
 		<main>
 			<section class="bannerinfo">
-				<img class="banner768" src="./img/mainimg.png" alt="banner" />
+				<img class="banner768 hidebanner" src="./img/mainimg.png" alt="banner" />
 				<div class="bannerText">
 					<h1>THE BRAND</h1>
 					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
