--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -140,5 +140,55 @@
 		<div class="finishbtn container">
 			<button class="btnAll">Browse All Product</button>
 		</div>
+		<footer>
+			<section class="feature container">
+				<article class="feature__form">
+					<img src="./img/feature1.svg" alt="Feature1" />
+					<h1>Free Delivery</h1>
+					<p>
+						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+					</p>
+				</article>
+				<article class="feature__form">
+					<img src="./img/feature2.png" alt="Feature2" />
+					<h1>Sales & discounts</h1>
+					<p>
+						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+					</p>
+				</article>
+				<article class="feature__form">
+					<img src="./img/feature3.png" alt="Feature3" />
+					<h1>Quality assurance</h1>
+					<p>
+						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+					</p>
+				</article>
+			</section>
+			<section class="subcribe">
+				<div class="photo">
+					<div class="photo__shadow">
+						<div class="photo__registration container">
+							<div class="photo__registration-info">
+								<img src="./img/woman.png" alt="Woman" />
+								<p>
+									“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+									<span style="font-style: italic">a pulvinar purus condimentum</span>“
+								</p>
+							</div>
+							<div class="photo__registration-rega">
+								<div>
+									<h1>SUBSCRIBE</h1>
+									<h2>FOR OUR NEWLETTER AND PROMOTION</h2>
+								</div>
+								<form class="forma">
+									<input type="email" placeholder="Enter Your Email" />
+									<button>Subscribe</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
 	</body>
 </html>
