--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -27,6 +27,33 @@
 					<h1>THE BRAND</h1>
 					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
 				</div>
+				<div class="menu hidemenu">
+					<h1>MENU</h1>
+					<div class="menu__man">
+						<h2>MAN</h2>
+						<h3>Accessories</h3>
+						<h3>Bags</h3>
+						<h3>Denim</h3>
+						<h3>T-Shirts</h3>
+					</div>
+					<div class="menu__woman">
+						<h2>WOMAN</h2>
+						<h3>Accessories</h3>
+						<h3>Jackets & Coats</h3>
+						<h3>Polos</h3>
+						<h3>T-Shirts</h3>
+						<h3>Shirts</h3>
+					</div>
+					<div class="menu__kids">
+						<h2>KIDS</h2>
+						<h3>Accessories</h3>
+						<h3>Jackets & Coats</h3>
+						<h3>Polos</h3>
+						<h3>T-Shirts</h3>
+						<h3>Shirts</h3>
+						<h3>Bags</h3>
+					</div>
+				</div>
 			</section>
 		</main>
 		<section class="offer container">
@@ -71,7 +98,13 @@
 		</section>
 		<section class="products container">
 			<div class="product">
-				<img src="./img/product1.jpg" alt="Product1" />
+				<div class="product1">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
@@ -82,7 +115,13 @@
 				</div>
 			</div>
 			<div class="product">
-				<img src="./img/product2.png" alt="Product2" />
+				<div class="product2">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
@@ -93,7 +132,13 @@
 				</div>
 			</div>
 			<div class="product">
-				<img src="./img/product3.jpg" alt="Product3" />
+				<div class="product3">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
@@ -104,7 +149,13 @@
 				</div>
 			</div>
 			<div class="product">
-				<img src="./img/product4.jpg" alt="Product4" />
+				<div class="product4">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
@@ -115,7 +166,13 @@
 				</div>
 			</div>
 			<div class="product">
-				<img src="./img/product5.png" alt="Product5" />
+				<div class="product5">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
@@ -126,7 +183,13 @@
 				</div>
 			</div>
 			<div class="product">
-				<img src="./img/product6.png" alt="Product5" />
+				<div class="product6">
+					<div class="shadowProduct hiddenshadowProduct">
+						<div class="btnProduct">
+							<button><img src="./img/forma_product.svg" alt="formaProduct" />Add to Cart</button>
+						</div>
+					</div>
+				</div>
 				<div class="prodInfo">
 					<h1>ELLERY X M'O CAPSULE</h1>
 					<p>
