--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Lesson 10" />
 		<link rel="stylesheet" href="./style.css" />
 		<title>Lesson6</title>
 	</head>
@@ -22,7 +23,7 @@
 		</header>
 		<main>
 			<section class="bannerinfo">
-				<img class="banner768 hidebanner" src="./img/mainimg.png" alt="banner" />
+				<img class="banner768 hidebanner" src="./img/mainimg.webp" alt="banner" />
 				<div class="bannerText">
 					<h1>THE BRAND</h1>
 					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
