--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -15,7 +15,7 @@
 					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
 				</div>
 				<div class="buttonList">
-					<button class="btn"><img src="./img/forma2.svg" alt="Forma2" /></button>
+					<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
 					<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
 					<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
 				</div>
@@ -31,28 +31,28 @@
 				<div class="menu hidemenu">
 					<h1>MENU</h1>
 					<div class="menu__man">
-						<h2>MAN</h2>
-						<h3>Accessories</h3>
-						<h3>Bags</h3>
-						<h3>Denim</h3>
-						<h3>T-Shirts</h3>
+						<a class="menu-h2" href="#">MAN</a>
+						<a href="#">Accessories</a>
+						<a href="#">Bags</a>
+						<a href="#">Denim</a>
+						<a href="#">T-Shirts</a>
 					</div>
 					<div class="menu__woman">
-						<h2>WOMAN</h2>
-						<h3>Accessories</h3>
-						<h3>Jackets & Coats</h3>
-						<h3>Polos</h3>
-						<h3>T-Shirts</h3>
-						<h3>Shirts</h3>
+						<a class="menu-h2" href="#">WOMAN</a>
+						<a href="#">Accessories</a>
+						<a href="#">Jackets &amp;&nbsp;Coats</a>
+						<a href="#">Polos</a>
+						<a href="#">T-Shirts</a>
+						<a href="#">Shirts</a>
 					</div>
 					<div class="menu__kids">
-						<h2>KIDS</h2>
-						<h3>Accessories</h3>
-						<h3>Jackets & Coats</h3>
-						<h3>Polos</h3>
-						<h3>T-Shirts</h3>
-						<h3>Shirts</h3>
-						<h3>Bags</h3>
+						<a class="menu-h2" href="#">KIDS</a>
+						<a href="#">Accessories</a>
+						<a href="#">Jackets &amp;&nbsp;Coats</a>
+						<a href="#">Polos</a>
+						<a href="#">T-Shirts</a>
+						<a href="#">Shirts</a>
+						<a href="#">Bags</a>
 					</div>
 				</div>
 			</section>
@@ -85,7 +85,7 @@
 			<div class="card4 cardBig">
 				<div class="shadow">
 					<div class="price priceBig">
-						<h1>LUXIROUS & TRENDY</h1>
+						<h1>LUXIROUS &amp;&nbsp;TRENDY</h1>
 						<h2>ACCESORIES</h2>
 					</div>
 				</div>
@@ -215,7 +215,7 @@
 				</article>
 				<article class="feature__form">
 					<img src="./img/feature2.png" alt="Feature2" />
-					<h1>Sales & discounts</h1>
+					<h1>Sales &amp;&nbsp;discounts</h1>
 					<p>
 						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
 					</p>
@@ -277,9 +277,9 @@
 								/>
 							</g>
 							<defs>
-								<clipPath id="clip0_190_1608">
+								<clippath id="clip0_190_1608">
 									<rect width="14.8991" height="17" fill="white" transform="translate(8.68396 8)" />
-								</clipPath>
+								</clippath>
 							</defs>
 						</svg>
 					</a>
@@ -293,9 +293,9 @@
 								/>
 							</g>
 							<defs>
-								<clipPath id="clip0_190_1616">
+								<clippath id="clip0_190_1616">
 									<rect width="11.9193" height="16" fill="white" transform="translate(10.4081 8)" />
-								</clipPath>
+								</clippath>
 							</defs>
 						</svg>
 					</a>
@@ -309,14 +309,15 @@
 								/>
 							</g>
 							<defs>
-								<clipPath id="clip0_190_1612">
+								<clippath id="clip0_190_1612">
 									<rect width="15.8924" height="16" fill="white" transform="translate(8.1593 8)" />
-								</clipPath>
+								</clippath>
 							</defs>
 						</svg>
 					</a>
 				</nav>
 			</section>
 		</footer>
+		<script src="./script.js"></script>
 	</body>
 </html>
