--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -233,7 +233,7 @@
 					<div class="photo__shadow">
 						<div class="photo__registration container">
 							<div class="photo__registration-info">
-								<img src="./img/woman.png" alt="Woman" />
+								<img src="./img/woman.webp" alt="Woman" />
 								<p>
 									“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
 									<span style="font-style: italic">a pulvinar purus condimentum</span>“
