--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -26,7 +26,7 @@
 				<img class="banner768 hidebanner" src="./img/mainimg.webp" alt="banner" />
 				<div class="bannerText">
 					<h1>THE BRAND</h1>
-					<h2>OF LUXERIOUS <span style="color: #f16d7f">FASHION</span></h2>
+					<h2>OF LUXERIOUS <span style="color: #c96674">FASHION</span></h2>
 				</div>
 				<div class="menu hidemenu">
 					<h1>MENU</h1>
