--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -8,8 +8,10 @@
 		<title>Lesson6</title>
 	</head>
 	<body>
+		<h2 style="display: none">Online stores</h2>
 		<header>
 			<nav class="navigation container">
+				<h2 style="display: none">Main button</h2>
 				<div class="logos">
 					<a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
 					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
@@ -206,6 +208,7 @@
 		</div>
 		<footer>
 			<section class="feature container">
+				<h2 style="display: none">Our feature</h2>
 				<article class="feature__form">
 					<img src="./img/feature1.svg" alt="Feature1" />
 					<h2>Free Delivery</h2>
@@ -253,11 +256,14 @@
 					</div>
 				</div>
 			</section>
+			<h2 style="display: none">Our social media</h2>
 			<section class="background container">
+				<h2 style="display: none">Brand All Rights Reserved</h2>
 				<div>
 					<p>© 2022 Brand All Rights Reserved.</p>
 				</div>
 				<nav class="socialIcon">
+					<h2 style="display: none">Navigation</h2>
 					<a href="#"
 						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M31.4506 0H0V32H31.4506V0Z" fill="white" class="icon" />
