--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -9,10 +9,10 @@
 	</head>
 	<body>
 		<h2 style="display: none">Online stores</h2>
-		<header>
-			<nav class="navigation container">
+		<header class="header">
+			<nav class="header__navigation container">
 				<h2 style="display: none">Main button</h2>
-				<div class="logos">
+				<div class="header__logos">
 					<a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
 					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
 				</div>
@@ -213,21 +213,24 @@
 					<img src="./img/feature1.svg" alt="Feature1" />
 					<h2>Free Delivery</h2>
 					<p>
-						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+						Worldwide delivery on all. Authorit tively morph
+						<span style="white-space: nowrap">next-generation</span> innov tion with extensive models.
 					</p>
 				</article>
 				<article class="feature__form">
 					<img src="./img/feature2.png" alt="Feature2" />
 					<h2>Sales &amp;&nbsp;discounts</h2>
 					<p>
-						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+						Worldwide delivery on all. Authorit tively morph
+						<span style="white-space: nowrap">next-generation</span> innov tion with extensive models.
 					</p>
 				</article>
 				<article class="feature__form">
 					<img src="./img/feature3.png" alt="Feature3" />
 					<h2>Quality assurance</h2>
 					<p>
-						Worldwide delivery on all. Authorit tively morph next-&nbsp;generation innov tion with extensive models.
+						Worldwide delivery on all. Authorit tively morph
+						<span style="white-space: nowrap">next-generation</span> innov tion with extensive models.
 					</p>
 				</article>
 			</section>
