--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -259,14 +259,22 @@
 			</div>
 		</section>
 		<div class="pagination container">
+			<svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M7.99512 2L2.99512 7L7.99512 12L6.99512 14L-0.00488281 7L6.99512 0L7.99512 2Z" fill="black" />
+			</svg>
 			<a class="pagination_color" href="#">1</a>
 			<a href="#">2</a>
 			<a href="#">3</a>
 			<a href="#">4</a>
 			<a href="#">5</a>
-			<a href="#">6</a>
-			<span>.....</span>
-			<a href="#">20</a>
+			<div class="pagination__group">
+				<a href="#">6</a>
+				<span>.....</span>
+				<a href="#">20</a>
+			</div>
+			<svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M-0.00500488 12L4.995 7L-0.00500488 2L0.994995 0L7.995 7L0.994995 14L-0.00500488 12Z" fill="black" />
+			</svg>
 		</div>
 		<footer>
 			<section class="feature container">
