--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -64,11 +64,27 @@
 			</section>
 		</main>
 		<section class="bannerinfoProduct">
-			<div class="bannerinfoProduct__background">
-				<img src="./img/image_woman_product.jpg" alt="image_woman_product" />
+			<div class="bannerinfoProduct__background"></div>
+			<div class="bannerinfoProduct__background-left">
+				<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+					<path
+						d="M29.6998 15.7499L21.9498 23.4999L29.6998 31.2499L28.1498 34.3499L17.2998 23.4999L28.1498 12.6499L29.6998 15.7499Z"
+						fill="black"
+					/>
+				</svg>
+			</div>
+			<div class="bannerinfoProduct__background-right">
+				<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+					<path
+						d="M17.2998 31.2499L25.0498 23.4999L17.2998 15.7499L18.8498 12.6499L29.6998 23.4999L18.8498 34.3499L17.2998 31.2499Z"
+						fill="#F16D7F"
+					/>
+				</svg>
 			</div>
 		</section>
-		<div class="bannerinfoProduct__overlay container">
+		<article class="bannerinfoProduct__overlay container">
 			<h1>WOMEN COLLECTION</h1>
 			<svg width="63" height="4" viewBox="0 0 63 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M63 0.786865H0V3.81225H63V0.786865Z" fill="#EF5B70" />
@@ -80,7 +96,7 @@
 				than exceptional portals.
 			</p>
 			<h3>$561</h3>
-		</div>
+		</article>
 		<section class="productsProduct container">
 			<div class="product">
 				<div class="product4">
@@ -134,24 +150,6 @@
 				</div>
 			</div>
 		</section>
-		<div class="pagination container">
-			<svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M7.99512 2L2.99512 7L7.99512 12L6.99512 14L-0.00488281 7L6.99512 0L7.99512 2Z" fill="black" />
-			</svg>
-			<a class="pagination_color" href="#">1</a>
-			<a href="#">2</a>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">5</a>
-			<div class="pagination__group">
-				<a href="#">6</a>
-				<span>.....</span>
-				<a href="#">20</a>
-			</div>
-			<svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M-0.00500488 12L4.995 7L-0.00500488 2L0.994995 0L7.995 7L0.994995 14L-0.00500488 12Z" fill="black" />
-			</svg>
-		</div>
 		<footer>
 			<section class="feature container">
 				<h2 style="display: none">Our feature</h2>
