--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -96,9 +96,9 @@
 				than exceptional portals.
 			</p>
 			<h3>$561</h3>
-			<span class="bannerinfoProduct__overlay_line"></span>
-			<div class="bannerinfoProduct__filter">
-				<div class="bannerinfoProduct__filter_gap">
+			<span class="bannerinfoProduct__overlay__line"></span>
+			<div class="bannerinfoProduct__overlay__filter">
+				<div class="bannerinfoProduct__overlay__filter_gap">
 					<h2>CHOOSE COLOR</h2>
 					<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
@@ -107,7 +107,7 @@
 						/>
 					</svg>
 				</div>
-				<div class="bannerinfoProduct__filter_gap">
+				<div class="bannerinfoProduct__overlay__filter_gap">
 					<h2>CHOOSE SIZE</h2>
 					<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
@@ -116,7 +116,7 @@
 						/>
 					</svg>
 				</div>
-				<div class="bannerinfoProduct__filter_gap">
+				<div class="bannerinfoProduct__overlay__filter_gap">
 					<h2>QUANTITY</h2>
 					<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
@@ -126,7 +126,9 @@
 					</svg>
 				</div>
 			</div>
-			<button class="bannerinfoProduct__button"><img src="./img/basket_form.svg" alt="basket" />Add to Cart</button>
+			<button class="bannerinfoProduct__overlay__button">
+				<img src="./img/basket_form.svg" alt="basket" />Add to Cart
+			</button>
 		</article>
 		<section class="productsProduct container">
 			<div class="product">
