--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -12,7 +12,7 @@
 			<nav class="header__navigation container">
 				<h2 style="display: none">Main button</h2>
 				<div class="header__logos">
-					<a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
+					<a href="./index.html"><img src="./img/logo.svg" alt="Logo" /></a>
 					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
 				</div>
 				<div class="buttonList">
