--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -65,7 +65,7 @@
 		</main>
 		<section class="filter container">
 			<div class="filter__detail">
-				<details>
+				<details class="filter__main">
 					<summary class="filter__summary">
 						FILTER
 						<svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,9 +76,9 @@
 						</svg>
 					</summary>
 					<div class="filter__info">
-						<details>
+						<details class="filter__info__details">
 							<summary class="filter__info_summary">CATEGORY</summary>
-							<div>
+							<div class="filter__info__products">
 								<a href="#">Accessories</a>
 								<a href="#">Bags</a>
 								<a href="#">Denim</a>
@@ -92,10 +92,10 @@
 								<a href="#">Tanks</a>
 							</div>
 						</details>
-						<details>
+						<details class="filter__info__details">
 							<summary class="filter__info_summary">BRAND</summary>
 						</details>
-						<details>
+						<details class="filter__info__details">
 							<summary class="filter__info_summary">DESIGNER</summary>
 						</details>
 					</div>
