--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -8,82 +8,84 @@
 	</head>
 	<body>
 		<h2 style="display: none">Catalog</h2>
-		<header class="header">
-			<nav class="header__navigation container">
-				<h2 style="display: none">Main button</h2>
-				<div class="header__logos">
-					<a href="./index.html"><img src="./img/logo.svg" alt="Logo" /></a>
-					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
-				</div>
-				<div class="buttonList">
-					<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
-					<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
-					<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
-				</div>
-			</nav>
-		</header>
-		<main>
-			<section class="bannerinfoCatalog container">
-				<div class="bannerinfoCatalog__message">
-					<h2>NEW ARRIVALS</h2>
-				</div>
-				<nav class="bannerinfoCatalog__breadcrumb">
-					<a href="./index.html">HOME</a>
-					<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
-					<a href="#">MEN</a>
-					<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
-					<a class="bannerinfoCatalog__breadcrumb_color-size" href="#">NEW ARRIVALS</a>
+		<div class="top">
+			<header class="header">
+				<nav class="header__navigation container">
+					<h2 style="display: none">Main button</h2>
+					<div class="header__logos">
+						<a href="./index.html"><img src="./img/logo.svg" alt="Logo" /></a>
+						<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
+					</div>
+					<div class="buttonList">
+						<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
+						<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
+						<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
+					</div>
 				</nav>
-				<div class="menu hidemenu">
-					<h1>MENU</h1>
-					<div class="menu__man">
-						<a class="menu-h2" href="#">MAN</a>
-						<a href="#">Accessories</a>
-						<a href="#">Bags</a>
-						<a href="#">Denim</a>
-						<a href="#">T-Shirts</a>
+			</header>
+			<main>
+				<section class="bannerinfoCatalog container">
+					<div class="bannerinfoCatalog__message">
+						<h2>NEW ARRIVALS</h2>
 					</div>
-					<div class="menu__woman">
-						<a class="menu-h2" href="#">WOMAN</a>
-						<a href="#">Accessories</a>
-						<a href="#">Jackets &amp;&nbsp;Coats</a>
-						<a href="#">Polos</a>
-						<a href="#">T-Shirts</a>
-						<a href="#">Shirts</a>
+					<nav class="bannerinfoCatalog__breadcrumb">
+						<a href="./index.html">HOME</a>
+						<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
+						<a href="#">MEN</a>
+						<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
+						<a class="bannerinfoCatalog__breadcrumb_color-size" href="#">NEW ARRIVALS</a>
+					</nav>
+					<div class="menu hidemenu">
+						<h1>MENU</h1>
+						<div class="menu__man">
+							<a class="menu-h2" href="#">MAN</a>
+							<a href="#">Accessories</a>
+							<a href="#">Bags</a>
+							<a href="#">Denim</a>
+							<a href="#">T-Shirts</a>
+						</div>
+						<div class="menu__woman">
+							<a class="menu-h2" href="#">WOMAN</a>
+							<a href="#">Accessories</a>
+							<a href="#">Jackets &amp;&nbsp;Coats</a>
+							<a href="#">Polos</a>
+							<a href="#">T-Shirts</a>
+							<a href="#">Shirts</a>
+						</div>
+						<div class="menu__kids">
+							<a class="menu-h2" href="#">KIDS</a>
+							<a href="#">Accessories</a>
+							<a href="#">Jackets &amp;&nbsp;Coats</a>
+							<a href="#">Polos</a>
+							<a href="#">T-Shirts</a>
+							<a href="#">Shirts</a>
+							<a href="#">Bags</a>
+						</div>
 					</div>
-					<div class="menu__kids">
-						<a class="menu-h2" href="#">KIDS</a>
-						<a href="#">Accessories</a>
-						<a href="#">Jackets &amp;&nbsp;Coats</a>
-						<a href="#">Polos</a>
-						<a href="#">T-Shirts</a>
-						<a href="#">Shirts</a>
-						<a href="#">Bags</a>
-					</div>
+				</section>
+			</main>
+			<section class="bannerinfoProduct">
+				<div class="bannerinfoProduct__background"></div>
+				<div class="bannerinfoProduct__background-left">
+					<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+						<path
+							d="M29.6998 15.7499L21.9498 23.4999L29.6998 31.2499L28.1498 34.3499L17.2998 23.4999L28.1498 12.6499L29.6998 15.7499Z"
+							fill="black"
+						/>
+					</svg>
+				</div>
+				<div class="bannerinfoProduct__background-right">
+					<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+						<path
+							d="M17.2998 31.2499L25.0498 23.4999L17.2998 15.7499L18.8498 12.6499L29.6998 23.4999L18.8498 34.3499L17.2998 31.2499Z"
+							fill="#F16D7F"
+						/>
+					</svg>
 				</div>
 			</section>
-		</main>
-		<section class="bannerinfoProduct">
-			<div class="bannerinfoProduct__background"></div>
-			<div class="bannerinfoProduct__background-left">
-				<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
-					<path
-						d="M29.6998 15.7499L21.9498 23.4999L29.6998 31.2499L28.1498 34.3499L17.2998 23.4999L28.1498 12.6499L29.6998 15.7499Z"
-						fill="black"
-					/>
-				</svg>
-			</div>
-			<div class="bannerinfoProduct__background-right">
-				<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
-					<path
-						d="M17.2998 31.2499L25.0498 23.4999L17.2998 15.7499L18.8498 12.6499L29.6998 23.4999L18.8498 34.3499L17.2998 31.2499Z"
-						fill="#F16D7F"
-					/>
-				</svg>
-			</div>
-		</section>
+		</div>
 		<article class="bannerinfoProduct__overlay container">
 			<h1>WOMEN COLLECTION</h1>
 			<svg width="63" height="4" viewBox="0 0 63 4" fill="none" xmlns="http://www.w3.org/2000/svg">
