--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -17,7 +17,9 @@
 					<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
 				</div>
 				<div class="buttonList">
-					<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
+					<div class="buttonList__checkbox">
+						<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
+					</div>
 					<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
 					<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
 				</div>
