--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -16,7 +16,14 @@
 						<a href="#"><img src="./img/logo.svg" alt="Logo" /></a>
 						<button class="btn"><img src="./img/forma1.svg" alt="Forma1" /></button>
 					</div>
-					<div class="buttonList__catalog">
+					<div class="buttonList">
+						<div class="buttonList__checkbox">
+							<button class="btn btnmenu"><img src="./img/forma2.svg" alt="Forma2" /></button>
+						</div>
+						<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
+						<button class="btn hideBtn"><img src="./img/forma4.svg" alt="Forma4" /></button>
+					</div>
+					<!-- <div class="buttonList__catalog">
 						<input id="check" type="checkbox" />
 						<label for="check"><img src="./img/forma2.svg" alt="Forma2" /></label>
 						<button class="btn hideBtn"><img src="./img/forma3.svg" alt="Forma3" /></button>
@@ -46,9 +53,9 @@
 								<a href="#">T-Shirts</a>
 								<a href="#">Shirts</a>
 								<a href="#">Bags</a>
-							</div>
-						</div>
-					</div>
+							</div> -->
+					<!-- </div> -->
+					<!-- </div> -->
 				</nav>
 			</header>
 			<main>
@@ -63,6 +70,33 @@
 						<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
 						<a class="bannerinfoCatalog__breadcrumb_color-size" href="#">NEW ARRIVALS</a>
 					</nav>
+					<div class="menu hidemenu">
+						<h1>MENU</h1>
+						<div class="menu__man">
+							<a class="menu-h2" href="#">MAN</a>
+							<a href="#">Accessories</a>
+							<a href="#">Bags</a>
+							<a href="#">Denim</a>
+							<a href="#">T-Shirts</a>
+						</div>
+						<div class="menu__woman">
+							<a class="menu-h2" href="#">WOMAN</a>
+							<a href="#">Accessories</a>
+							<a href="#">Jackets &amp;&nbsp;Coats</a>
+							<a href="#">Polos</a>
+							<a href="#">T-Shirts</a>
+							<a href="#">Shirts</a>
+						</div>
+						<div class="menu__kids">
+							<a class="menu-h2" href="#">KIDS</a>
+							<a href="#">Accessories</a>
+							<a href="#">Jackets &amp;&nbsp;Coats</a>
+							<a href="#">Polos</a>
+							<a href="#">T-Shirts</a>
+							<a href="#">Shirts</a>
+							<a href="#">Bags</a>
+						</div>
+					</div>
 				</section>
 			</main>
 			<section class="filter container">
@@ -454,5 +488,6 @@
 				</nav>
 			</section>
 		</footer>
+		<script src="./script.js"></script>
 	</body>
 </html>
