--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -64,11 +64,11 @@
 						<h2>NEW ARRIVALS</h2>
 					</div>
 					<nav class="bannerinfoCatalog__breadcrumb">
-						<a href="./index.html">HOME</a>
-						<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
-						<a href="#">MEN</a>
-						<span class="bannerinfoCatalog__breadcrumb-separator"> / </span>
-						<a class="bannerinfoCatalog__breadcrumb_color-size" href="#">NEW ARRIVALS</a>
+						<div class="bannerinfoCatalog__breadcrumb__box"><a href="./index.html">HOME</a></div>
+						<!-- <span class="bannerinfoCatalog__breadcrumb-separator"> / </span> -->
+						<div class="bannerinfoCatalog__breadcrumb__box"><a href="#">MEN</a></div>
+						<!-- <span class="bannerinfoCatalog__breadcrumb-separator"> / </span> -->
+						<div class="bannerinfoCatalog__breadcrumb__box"><a href="#">NEW ARRIVALS</a></div>
 					</nav>
 					<div class="menu hidemenu">
 						<h1>MENU</h1>
