--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -135,7 +135,13 @@
 								<h2 class="productsCart__grandtotal_color">$900</h2>
 							</div>
 						</div>
+						<div class="productsCart__line"></div>
+						<button>PROCEED TO CHECKOUT</button>
 					</div>
+				</div>
+				<div class="productsCart__mainButtons">
+					<button class="productsCart__mainButtons_left">CLEAR SHOPPING CART</button>
+					<button class="productsCart__mainButtons_right">CONTINUE SHOPPING</button>
 				</div>
 			</section>
 		</div>
