--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -68,7 +68,14 @@
 								<div class="productsCart__main_size">
 									<h1>MANGO PEOPLE <span style="white-space: nowrap">T-SHIRT</span></h1>
 								</div>
-								<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg
+									class="productsCart__main_svg"
+									width="18"
+									height="18"
+									viewBox="0 0 18 18"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
 									<path
 										d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
 										fill="#575757"
@@ -102,7 +109,14 @@
 								<div class="productsCart__main_size">
 									<h1>MANGO PEOPLE <span style="white-space: nowrap">T-SHIRT</span></h1>
 								</div>
-								<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg
+									class="productsCart__main_svg"
+									width="18"
+									height="18"
+									viewBox="0 0 18 18"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
 									<path
 										d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
 										fill="#575757"
@@ -181,7 +195,7 @@
 					<h2 style="display: none">Navigation</h2>
 					<a href="#"
 						><svg
-							class="icon_white"
+							class="social-svg"
 							width="32"
 							height="32"
 							viewBox="0 0 32 32"
@@ -196,7 +210,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="33"
+							height="32"
+							viewBox="0 0 33 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M32.1883 0H0.737671V32H32.1883V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1608)">
 								<path
@@ -212,7 +233,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.9259 0H0.475342V32H31.9259V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1616)">
 								<path
@@ -228,7 +256,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.6636 0H0.213013V32H31.6636V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1612)">
 								<path
