--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -423,7 +423,7 @@
 					<h2 style="display: none">Navigation</h2>
 					<a href="#"
 						><svg
-							class="icon_white"
+							class="social-svg"
 							width="32"
 							height="32"
 							viewBox="0 0 32 32"
@@ -438,7 +438,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="33"
+							height="32"
+							viewBox="0 0 33 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M32.1883 0H0.737671V32H32.1883V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1608)">
 								<path
@@ -454,7 +461,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.9259 0H0.475342V32H31.9259V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1616)">
 								<path
@@ -470,7 +484,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.6636 0H0.213013V32H31.6636V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1612)">
 								<path
