--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -233,7 +233,14 @@
 				<nav class="socialIcon">
 					<h2 style="display: none">Navigation</h2>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.4506 0H0V32H31.4506V0Z" fill="white" class="icon" />
 							<path
 								d="M19.0884 16.28L19.5069 13.616H16.8902V11.8873C16.8902 11.1585 17.2557 10.4481 18.4277 10.4481H19.6172V8.17997C19.6172 8.17997 18.5377 8 17.5056 8C15.3507 8 13.9422 9.27593 13.9422 11.5857V13.616H11.5469V16.28H13.9422V22.72H16.8902V16.28H19.0884Z"
@@ -242,7 +249,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="33"
+							height="32"
+							viewBox="0 0 33 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M32.1883 0H0.737671V32H32.1883V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1608)">
 								<path
@@ -258,7 +272,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.9259 0H0.475342V32H31.9259V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1616)">
 								<path
@@ -274,7 +295,14 @@
 						</svg>
 					</a>
 					<a href="#"
-						><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						><svg
+							class="social-svg"
+							width="32"
+							height="32"
+							viewBox="0 0 32 32"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
 							<path d="M31.6636 0H0.213013V32H31.6636V0Z" fill="white" class="icon" />
 							<g clip-path="url(#clip0_190_1612)">
 								<path
