--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -86,10 +86,9 @@
 								<h2>Price: <span style="color: #ef5b70">$300</span></h2>
 								<h2 class="productsCart__main_marging-left">Color: Red</h2>
 								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
-								<div class="productsCart__quantity">
-									<h2 class="productsCart__main_marging-left">Quantity:</h2>
-									<span>2</span>
-								</div>
+								<h2 class="productsCart__main_marging-left">
+									Quantity: <input class="productsCart__quantity" type="number" value="2" />
+								</h2>
 							</div>
 						</div>
 						<div class="productsCart__box">
@@ -116,10 +115,9 @@
 								<h2>Price: <span style="color: #ef5b70">$300</span></h2>
 								<h2 class="productsCart__main_marging-left">Color: Red</h2>
 								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
-								<div class="productsCart__quantity">
-									<h2 class="productsCart__main_marging-left">Quantity:</h2>
-									<span>2</span>
-								</div>
+								<h2 class="productsCart__main_marging-left">
+									Quantity: <input class="productsCart__quantity" type="number" value="2" />
+								</h2>
 							</div>
 						</div>
 						<div class="productsCart__mainButtons">
