--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -86,7 +86,7 @@
 								<h2>Price: <span style="color: #ef5b70">$300</span></h2>
 								<h2 class="productsCart__main_marging-left">Color: Red</h2>
 								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
-								<h2 class="productsCart__main_marging-left">
+								<h2 class="productsCart__main_marging-left productsCart__quantity_marging">
 									Quantity: <input class="productsCart__quantity" type="number" value="2" />
 								</h2>
 							</div>
