--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -116,7 +116,8 @@
 								<h2 class="productsCart__main_marging-left">Color: Red</h2>
 								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
 								<h2 class="productsCart__main_marging-left">
-									Quantity: <input class="productsCart__quantity" type="number" value="2" />
+									Quantity:
+									<input class="productsCart__quantity productsCart__quantity_marging" type="number" value="2" />
 								</h2>
 							</div>
 						</div>
