--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -7,7 +7,7 @@
 		<title>Product</title>
 	</head>
 	<body>
-		<h2 style="display: none">Catalog</h2>
+		<h2 style="display: none">Product</h2>
 		<div class="top">
 			<header class="header">
 				<nav class="header__navigation container">
