--- a/lesson6/registration.html
+++ b/lesson6/registration.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./style.css" />
-		<title>Cart</title>
+		<title>Registration</title>
 	</head>
 	<body>
-		<h2 style="display: none">Cart</h2>
+		<h2 style="display: none">Registration</h2>
 		<div class="top">
 			<header class="header">
 				<nav class="header__navigation container">
@@ -28,7 +28,7 @@
 			<main>
 				<section class="bannerinfoCart container">
 					<div class="bannerinfoCart__message">
-						<h2>SHOPPING CART</h2>
+						<h2>REGISTRATION</h2>
 					</div>
 					<div class="menu hidemenu">
 						<h1>MENU</h1>
@@ -59,104 +59,105 @@
 					</div>
 				</section>
 			</main>
-			<section class="productsCart container">
-				<div class="productsCart__allinfo">
-					<div class="productsCart__part1">
-						<div class="productsCart__box">
-							<img src="./img/product3.webp" alt="product3" />
-							<div class="productsCart__price">
-								<div class="productsCart__main">
-									<div class="productsCart__main_size">
-										<h1>MANGO PEOPLE <span style="white-space: nowrap">T-SHIRT</span></h1>
-									</div>
-									<svg
-										class="productsCart__main_svg"
-										width="18"
-										height="18"
-										viewBox="0 0 18 18"
-										fill="none"
-										xmlns="http://www.w3.org/2000/svg"
-									>
-										<path
-											d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-											fill="#575757"
-										/>
-									</svg>
-								</div>
-								<h2>Price: <span style="color: #ef5b70">$300</span></h2>
-								<h2 class="productsCart__main_marging-left">Color: Red</h2>
-								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
-								<h2 class="productsCart__main_marging-left productsCart__quantity_marging">
-									Quantity: <input class="productsCart__quantity" type="number" value="2" />
-								</h2>
-							</div>
+			<section class="registration container">
+				<div class="registration__content">
+					<div class="registration__left-side">
+						<h2 class="registration__name">Your Name</h2>
+						<form>
+							<input class="registration__input" type="text" placeholder="First Name" />
+							<input class="registration__input" type="text" placeholder="Last Name" />
+						</form>
+						<div class="registration__gender">
+							<label class="registration__label"><input type="radio" name="gender" value="Male" />Male</label>
+							<label class="registration__label"><input type="radio" name="gender" value="Female" />Female</label>
 						</div>
-						<div class="productsCart__box">
-							<img src="./img/product7.png" alt="product7" />
-							<div class="productsCart__price">
-								<div class="productsCart__main">
-									<div class="productsCart__main_size">
-										<h1>MANGO PEOPLE <span style="white-space: nowrap">T-SHIRT</span></h1>
-									</div>
-									<svg
-										class="productsCart__main_svg"
-										width="18"
-										height="18"
-										viewBox="0 0 18 18"
-										fill="none"
-										xmlns="http://www.w3.org/2000/svg"
-									>
-										<path
-											d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-											fill="#575757"
-										/>
-									</svg>
-								</div>
-								<h2>Price: <span style="color: #ef5b70">$300</span></h2>
-								<h2 class="productsCart__main_marging-left">Color: Red</h2>
-								<h2 class="productsCart__main_marging-left">Size: Xl</h2>
-								<h2 class="productsCart__main_marging-left productsCart__quantity_marging">
-									Quantity:
-									<input class="productsCart__quantity" type="number" value="2" />
-								</h2>
-							</div>
-						</div>
-						<div class="productsCart__mainButtons">
-							<button class="productsCart__mainButtons_left">CLEAR SHOPPING CART</button>
-							<button class="productsCart__mainButtons_right">CONTINUE SHOPPING</button>
-						</div>
+						<h2 class="registration__name">Login details</h2>
+						<form>
+							<input class="registration__input" type="email" placeholder="Email" />
+							<input class="registration__input" type="password" placeholder="Password" />
+						</form>
+						<p class="registration__info">
+							Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters
+						</p>
+						<button class="registration__button">
+							JOIN NOW
+							<svg
+								class="registration__svg"
+								width="17"
+								height="10"
+								viewBox="0 0 17 10"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z"
+									fill="white"
+								/>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z"
+									fill="white"
+								/>
+							</svg>
+						</button>
 					</div>
-					<div class="productsCart__part2">
-						<div class="productsCart__shipping">
-							<form class="productsCart__form">
-								<h2>SHIPPING ADRESS</h2>
-								<input type="text" placeholder="Bangladesh" />
-								<input type="text" placeholder="State" />
-								<input type="text" placeholder="Postcode / Zip" />
-								<button>GET A QUOTE</button>
-							</form>
+					<article class="registration__right-side">
+						<h2 class="registration__heading">LOYALTY HAS ITS PERKS</h2>
+						<p class="registration__text">
+							Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as
+							soon as you join:
+						</p>
+						<div class="registration__offers">
+							<p class="registration__offer">
+								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
+										fill="black"
+									/>
+								</svg>
+								15% off welcome offer
+							</p>
+							<p class="registration__offer">
+								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
+										fill="black"
+									/>
+								</svg>
+								Free shipping, returns and exchanges on all orders
+							</p>
+							<p class="registration__offer">
+								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
+										fill="black"
+									/>
+								</svg>
+								$10 off a purchase on your birthday
+							</p>
+							<p class="registration__offer">
+								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
+										fill="black"
+									/>
+								</svg>
+								Early access to products
+							</p>
+							<p class="registration__offer">
+								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
+										fill="black"
+									/>
+								</svg>
+								Exclusive offers & rewards
+							</p>
 						</div>
-						<div class="productsCart__total">
-							<div class="productsCart__subtotal">
-								<div>
-									<h2>SUB TOTAL</h2>
-								</div>
-								<div>
-									<h2>$900</h2>
-								</div>
-							</div>
-							<div class="productsCart__grandtotal">
-								<div>
-									<h2>GRAND TOTAL</h2>
-								</div>
-								<div>
-									<h2 class="productsCart__grandtotal_color">$900</h2>
-								</div>
-							</div>
-							<div class="productsCart__line"></div>
-							<button>PROCEED TO CHECKOUT</button>
-						</div>
-					</div>
+					</article>
 				</div>
 			</section>
 		</div>
