--- a/lesson6/registration.html
+++ b/lesson6/registration.html
@@ -154,7 +154,7 @@
 										fill="black"
 									/>
 								</svg>
-								Exclusive offers & rewards
+								Exclusive offers &amp;&nbsp;rewards
 							</p>
 						</div>
 					</article>
